--- a/Health/app/src/main/res/values/themes.xml
+++ b/Health/app/src/main/res/values/themes.xml
@@ -1,8 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Health" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">#000000</item>
+        <item name="colorPrimaryVariant">#000000</item>
+        <!-- Secondary color -->
+        <item name="colorSecondary">#FFFFFF</item>
     </style>
 
     <style name="Theme.Health" parent="Base.Theme.Health" />
