--- a/Health/app/src/main/res/layout/activity_menu_principal.xml
+++ b/Health/app/src/main/res/layout/activity_menu_principal.xml
@@ -87,6 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#075490"
+        android:onClick="registar_pasiente"
         android:text="Pacientes"
         android:textColor="#FFFFFF"
         app:cornerRadius="0dp"
@@ -117,7 +118,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#075490"
-        android:text="Turnos"
+        android:text="Agenda"
         android:textColor="#FFFFFF"
         app:cornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -132,7 +133,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#075490"
-        android:text="Pacientes Cargados"
+        android:onClick="confirmar_paciente"
+        android:text="Seguimiento"
         android:textColor="#FFFFFF"
         app:cornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
